# Docent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  claude_desktop_config.json.example  package.md  pyproject.toml  ruff.toml
docs/: model_schema.md
examples/demo_model/: model.py  run_mcp.py
scripts/: entrypoint.sh  format.sh  lint.sh  pre-commit.sh  setup.sh  test.sh  typecheck.sh
src/docent/: __init__.py  config.py
src/docent/adapters/: __init__.py
src/docent/adapters/cli/: __init__.py  main.py
src/docent/adapters/data/: __init__.py  in_memory.py
src/docent/adapters/mcp_server/: __init__.py  __main__.py  server.py
src/docent/ai/: __init__.py  dispatcher.py
src/docent/ai/providers/: __init__.py  azure_openai.py  base.py  claude.py
src/docent/ai/tools/: __init__.py  definitions.py
src/docent/application/: __init__.py  service.py
src/docent/domain/: __init__.py  models.py  ports.py
src/explicator/: __init__.py  config.py
src/explicator/adapters/: __init__.py
src/explicator/adapters/cli/: __init__.py  main.py
src/explicator/adapters/data/: __init__.py  in_memory.py
src/explicator/adapters/mcp_server/: __init__.py  __main__.py  server.py
src/explicator/ai/: __init__.py  dispatcher.py
src/explicator/ai/providers/: azure_openai.py  claude.py
src/explicator/application/: __init__.py  service.py
src/explicator/domain/: __init__.py  ports.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_mcp_server.py
tests/unit/: __init__.py  test_dispatcher.py  test_mcp_tools.py  test_service.py
(+1 files in other folders)
